--- a/k8-manifests/common/api-server-svc.yaml
+++ b/k8-manifests/common/api-server-svc.yaml
@@ -12,17 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START anthosbaremetal_common_inventory_service_inventory_svc]
+# [START anthosbaremetal_common_api_server_svc_service_api_server_svc]
 apiVersion: v1
 kind: Service
 metadata:
-  name: inventory-svc
+  name: api-server-svc
 spec:
   type: ClusterIP
   selector:
-    app: inventory
+    app: api-server
   ports:
   - name: http
     port: 8080
     targetPort: 8080
-# [END anthosbaremetal_common_inventory_service_inventory_svc]
+# [END anthosbaremetal_common_api_server_service_api_server_svc]
