--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -73,7 +73,7 @@ steps:
     git tag v$$VERSION -a "Release: v$$VERSION"
     git push -u https://$$GITHUB_TOKEN@github.com/GoogleCloudPlatform/point-of-sale.git $BRANCH_NAME --tags
 
-    gh release create v$$VERSION -F CHANGELOG.md -d
+    gh release create v$$VERSION -t "Release v$$VERSION" -F CHANGELOG.md -d
   # waitFor: commented out, so this step waits for all previous steps
 
 - id: 'update-to-next-snapshot'
@@ -133,11 +133,12 @@ steps:
     git commit -m "release: bump version to next snapshot"
     git push -u https://$$GITHUB_TOKEN@github.com/GoogleCloudPlatform/point-of-sale.git $BRANCH_NAME
 
+    LAST_COMMIT=$(cat .git/refs/heads/$BRANCH_NAME)
     cat <<EOF > /workspace/gh-comment.txt -
     :zap:  Release Status :zap: </br>
-    - **Artifacts published**: Maven JARs and Container images for release version **v$$VERSION** have been published to Artifact Registry
+    - **Artifacts published**: [Maven JARs and Container images](https://console.cloud.google.com/artifacts/browse/point-of-sale-ci?project=point-of-sale-ci) for release version **v$$VERSION** have been published to Artifact Registry
     - **Manifests updated**: [Release manifests](https://github.com/GoogleCloudPlatform/point-of-sale/tree/$BRANCH_NAME/k8-manifests/release) have been updated to use the version **v$$VERSION** images
-    - **Version bumped:** Version in the _pom.xml/package.json_ has been bumped to the snapshot version of the next **patch** release **v$$SNAPSHOT_VERSION**
+    - **Version bumped:** Version in the _pom.xml/package.json_ has been bumped ($$LAST_COMMIT) to the snapshot version of the next **patch** release **v$$SNAPSHOT_VERSION**
     - **Github release created:** A draft [Github release](https://github.com/GoogleCloudPlatform/point-of-sale/releases) has been created. Inspect and **publish it**
     - **Merge PR:** Inspect the latest changes and merge the PR to **main** to complete the release.
 
