--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui",
-  "version": "0.2.1-SNAPSHOT",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "npm run lint && vue-cli-service serve",
