chore: add readme for release

--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -119,6 +119,7 @@ steps:
 
     rm release-pr.number
     rm release-version.txt
+    rm release.done
     rm /workspace/version-snapshot.txt
 
     git config user.email "$$GITHUB_EMAIL"
