improvement: add release automation files (#119)
* doc: restructure

* doc: fix region tag

* doc: fix region tags

* cleanup: update the skaffold file

* cleanup: add project suffix to the pom

* cleanup: fix path error in cloudbuild yaml

* fix: update the cloudbuild yamls

* cleanup: add the mvnwrapper

* lint: add correct license year

* fix: update the header

* fix: clpoudbuil yaml

* ci: add dir for deploy step

* ci: revert cloudbuild changes

* cleanup: maintain point-of-sale-app folder as is in main

* header: fix year

* cleanup: remove and add

* fix: header check error

* test: find directory

* test: find directory

* test: find directory

* cleanup: move maven wrapper to the root

* cleanup: add relativePath to parent pom

* cleanup: update the push to main yaml

* fix: the path issue in the apiserver pom

* release: add initial releaser code

* release: fix str error

* cleanup: get xml parser working

* cleanuP: fix pom linting

* cleanup: add extra linebreak

* fix: merge conflict

* cleanup: linting in ui pom

* improvement: add logic to update package.json

* lint: reformat the pom

* lint: remove extra space

* chore(release): 0.1.0-SNAPSHOT

* Revert "chore(release): 0.1.0-SNAPSHOT"

This reverts commit 8f3fae27fc7b650f163d4d0d9cadeecb6d7d9f7f.

* chore(release): 0.1.0-SNAPSHOT

* Revert "chore(release): 0.1.0-SNAPSHOT"

This reverts commit fdb238fc75ba00381615be6521875fcd740527d8.

* cleanup: add changlog packagejson

* fix: add code to update release pkg json

* fix: indent on pkf json

* fix: indent on pkf json

* process: add release trigger

* fix: escape env subs

* chore: add branch name

* chore: add pip install step

* chore: add git branch

* chore: add remote

* test: show remote

* test: show remote

* test: show remote

* test: show remote

* test: show remote

* test: show remote

* release: update version before release

--- a/.github/cloudbuild/pos-push-to-main.yaml
+++ b/.github/cloudbuild/pos-push-to-main.yaml
@@ -49,7 +49,7 @@ steps:
 
     ./mvnw install
     skaffold run -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_STAGING_NS-db --tag=$COMMIT_SHA-db
-    skaffold run -p dev,inmemory -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_STAGING_NS-db --tag=$COMMIT_SHA-inmemory
+    skaffold run -p dev,inmemory -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_STAGING_NS-inmemory --tag=$COMMIT_SHA-inmemory
     EOF
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
