--- a/k8-manifests/common/inventory-svc.yaml
+++ b/k8-manifests/common/inventory-svc.yaml
@@ -12,18 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START anthosbaremetal_k8_manifests_api_server_lb_service_api_server_lb]
+# [START anthosbaremetal_common_inventory_svc_service_inventory_svc]
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-server-lb
+  name: inventory-svc
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
-    app: api-server
+    app: inventory
   ports:
   - name: http
-    port: 80
+    port: 8080
     targetPort: 8080
-# [END anthosbaremetal_k8_manifests_api_server_lb_service_api_server_lb]
----
+# [END anthosbaremetal_common_inventory_svc_service_inventory_svc]
