--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version='1.0' encoding='utf-8'?>
 <!--
  Copyright 2021 Google LLC
 
@@ -13,10 +14,7 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -40,8 +38,6 @@
     <snakeyaml.version>1.30</snakeyaml.version>
     <springboot.version>2.6.2</springboot.version>
     <apache.commons.version>3.12.0</apache.commons.version>
-    <abm-edge.ui.version>0.1.0-SNAPSHOT</abm-edge.ui.version>
-    <abm-edge.sdk.version>0.1.0-SNAPSHOT</abm-edge.sdk.version>
     <jib-maven.plugin.version>3.2.0</jib-maven.plugin.version>
     <spring-boot-maven.plugin.version>2.6.3</spring-boot-maven.plugin.version>
     <mysql.connector.version>8.0.28</mysql.connector.version>
@@ -113,12 +109,12 @@
       <dependency>
         <groupId>com.google.abm-edge</groupId>
         <artifactId>ui</artifactId>
-        <version>${abm-edge.ui.version}</version>
+        <version>${pom.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.abm-edge</groupId>
         <artifactId>service-sdk</artifactId>
-        <version>${abm-edge.sdk.version}</version>
+        <version>${pom.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
