--- a/src/inventory/pom.xml
+++ b/src/inventory/pom.xml
@@ -106,6 +106,11 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <!--Coveo plugin is used to validate for code formatting. It uses 'google-java-format'-->
+        <groupId>com.coveo</groupId>
+        <artifactId>fmt-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
