cleanup: add maven verify step

--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -18,14 +18,28 @@
 ###########################################################
 
 steps:
-###########################################################
-# npm install to ensure ui dependencies have no errors
-###########################################################
+  ###########################################################
+  # npm install to ensure ui dependencies have no errors
+  ###########################################################
 - id: 'npm-install'
   name: 'node:16.14.0'
   dir: 'src/ui'
   entrypoint: 'npm'
   args: [ 'install' ]
+  # indicates that the step need not wait for any other step
+  waitFor: [ '-' ]
+
+  ###########################################################
+  # Verify that Java code has no errors
+  ###########################################################
+- id: 'maven-verify-java'
+  name: ubuntu
+  entrypoint: bash
+  args:
+  - -c
+  - |
+    # This will only check and report errors. Can fix them by using [./mvnw com.coveo:fmt-maven-plugin:format]
+    ./mvnw clean verify -DskipTests
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
 
