--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -33,7 +33,7 @@ steps:
   # Verify that Java code has no errors
   ###########################################################
 - id: 'maven-verify-java'
-  name: ubuntu
+  name: 'gcr.io/cloud-builders/mvn'
   entrypoint: bash
   args:
   - -c
@@ -47,7 +47,7 @@ steps:
   # create namespace yaml for the PR
   ###########################################################
 - id: 'create-namespace.yaml'
-  name: ubuntu
+  name: 'ubuntu'
   entrypoint: bash
   args:
   - -c
@@ -89,7 +89,7 @@ steps:
   # create the skaffold deploy script
   ###########################################################
 - id: 'create-skaffold-exec-script'
-  name: ubuntu
+  name: 'ubuntu'
   entrypoint: bash
   args:
   - -c
