cleanup: fix java linting errors (#131)
* improvement: add mysql support for the inventory service (#89)

* fix: remove incorrect delimiter in skaffold

* ci: add skaffold build step

* fix: namespace error in cloudbuild

* fix: the cloudbuild config for gcloud

* fix: the pr number prefix

* cleanup: use kubectl image

* cleanup: format cloudbuild file

* fix: pr prefix

* fix: change underscore to hyphen

* cleanup: update kubectl image in skaffold builder

* fix: kubectl command

* cleanup: add correct node version tag

* cleanup: update namepsace yaml creation

* cleanup: update the skaffold image usage

* cleanup: split the gcloud command

* cleanup: fix extra quotes

* fix: split the cloudbuild step commands

* cleanup: move gcloud and skaffold into a file

* cleanup: split the exec command

* fix: add skaffold build and deploy steps

* cleanup: add timeout to build

* cleanup: remove unused image

* cleanup: remove unused file

* process: add options related t custom sa

* cleanup: write logs to bucket

* test: trigger ci

* test: trigger ci

* cleanup: remove unnecessary skaffold steps

* cleanup:migrate to new project

* cleanup:migrate to new project

* test: check builds

* test: check builds

* test: check builds

* ci: add cleanup step

* ci: fix merge commits

* ci: add steps to deploy main to staging

* test: check builds

* ci: split the deploy steps

* test: check builds

* test: check builds

* test: check builds

* ci: remove the maven clean

* ci: fix repo name

* ci: fix repo name

* ci: comment the artifact maven plugin

* ci: add mvn clean step before skaffold

* ci: run the maven wrapper

* ci run the mvnw first

* ci: remove mvnw

* ci: remove mvnw

* ci: make mvnw executable

* ci: add mvnw back

* ci: add mvnw to the merge to pr step

* doc: minor fix (#87)

* doc: test pr (#88)

* doc: minor fix

* test: check builds

* test

--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -18,9 +18,9 @@
 ###########################################################
 
 steps:
-###########################################################
-# npm install to ensure ui dependencies have no errors
-###########################################################
+  ###########################################################
+  # npm install to ensure ui dependencies have no errors
+  ###########################################################
 - id: 'npm-install'
   name: 'node:16.14.0'
   dir: 'src/ui'
@@ -30,10 +30,24 @@ steps:
   waitFor: [ '-' ]
 
   ###########################################################
+  # Verify that Java code has no errors
+  ###########################################################
+- id: 'maven-verify-java'
+  name: 'gcr.io/cloud-builders/mvn'
+  entrypoint: bash
+  args:
+  - -c
+  - |
+    # This will only check and report errors. Can fix them by using [./mvnw com.coveo:fmt-maven-plugin:format]
+    mvn clean verify -DskipTests
+  # indicates that the step need not wait for any other step
+  waitFor: [ '-' ]
+
+  ###########################################################
   # create namespace yaml for the PR
   ###########################################################
 - id: 'create-namespace.yaml'
-  name: ubuntu
+  name: 'ubuntu'
   entrypoint: bash
   args:
   - -c
@@ -75,7 +89,7 @@ steps:
   # create the skaffold deploy script
   ###########################################################
 - id: 'create-skaffold-exec-script'
-  name: ubuntu
+  name: 'ubuntu'
   entrypoint: bash
   args:
   - -c
