Clarify jib's version and image in all configs

--- a/src/inventory/pom.xml
+++ b/src/inventory/pom.xml
@@ -79,6 +79,12 @@
         <!--Jib is a Maven plugin for building Docker and OCI images for your Java applications.-->
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>jib-maven-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <from>
+            <image>eclipse-temurin:17.0.4.1_1-jre-alpine</image>
+          </from>
+        </configuration>
       </plugin>
       <plugin>
         <!--The Spring Boot Maven Plugin provides Spring Boot support in Apache Maven.
