--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -150,7 +150,7 @@ steps:
 
 availableSecrets:
   secretManager:
-  - versionName: projects/$PROJECT_ID/secrets/_GHTOKEN_SECRET_NAME/versions/_GHTOKEN_SECRET_VERSION
+  - versionName: projects/$PROJECT_ID/secrets/$_GHTOKEN_SECRET_NAME/versions/$_GHTOKEN_SECRET_VERSION
     env: 'GITHUB_TOKEN'
   inline:
   # - kmsKeyName: 'projects/$PROJECT_ID/locations/global/keyRings/$_GHTOKEN_KEYRING_NAME/cryptoKeys/$_GHTOKEN_KEY_NAME'
