--- a/src/api-server/pom.xml
+++ b/src/api-server/pom.xml
@@ -26,7 +26,7 @@
   <name>api-server</name>
   <description>The api-server proxy for the Edge Use case workload</description>
   <properties>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.boot.mainclass>com.google.abmedge.apiserver.ApiServerApplication</spring.boot.mainclass>
   </properties>
@@ -99,6 +99,12 @@
         <!--Jib is a Maven plugin for building Docker and OCI images for your Java applications.-->
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>jib-maven-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <from>
+            <image>eclipse-temurin:17.0.4.1_1-jre-alpine</image>
+          </from>
+        </configuration>
       </plugin>
       <plugin>
         <!--The Spring Boot Maven Plugin provides Spring Boot support in Apache Maven.
