--- a/src/payments/pom.xml
+++ b/src/payments/pom.xml
@@ -27,7 +27,7 @@
   <description>Application to process payments for the Edge Use case workload
   </description>
   <properties>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
     <spring.boot.mainclass>com.google.abmedge.payments.PaymentsApplication</spring.boot.mainclass>
   </properties>
   <dependencies>
@@ -76,6 +76,12 @@
         <!--Jib is a Maven plugin for building Docker and OCI images for your Java applications.-->
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>jib-maven-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <from>
+            <image>eclipse-temurin:17.0.4.1_1-jre-alpine</image>
+          </from>
+        </configuration>
       </plugin>
       <plugin>
         <!--The Spring Boot Maven Plugin provides Spring Boot support in Apache Maven.
