--- a/src/api-server/src/main/resources/application.properties
+++ b/src/api-server/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.cloud.gcp.logging.enabled=true
