--- a/src/api-server/pom.xml
+++ b/src/api-server/pom.xml
@@ -48,7 +48,10 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>spring-cloud-gcp-logging</artifactId>
-      <version>3.4.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>spring-cloud-gcp-starter-trace</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
