--- a/src/inventory/pom.xml
+++ b/src/inventory/pom.xml
@@ -50,7 +50,10 @@
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>spring-cloud-gcp-logging</artifactId>
-      <version>3.4.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>spring-cloud-gcp-starter-trace</artifactId>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
