--- a/src/payments/pom.xml
+++ b/src/payments/pom.xml
@@ -50,11 +50,11 @@
     </dependency>
     <dependency>
       <groupId>com.google.cloud</groupId>
-      <artifactId>spring-cloud-gcp-logging</artifactId>
+      <artifactId>google-cloud-spanner</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.cloud</groupId>
-      <artifactId>spring-cloud-gcp-starter-trace</artifactId>
+      <artifactId>spring-cloud-gcp-data-spanner</artifactId>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
