--- a/src/inventory/src/main/resources/application.properties
+++ b/src/inventory/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=demouser
 spring.datasource.password=demopassword
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.cloud.gcp.logging.enabled=true
+spring.main.allow-bean-definition-overriding=true
