--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,6 @@
-* @GoogleCloudPlatform/blueprint-solutions @shabirmean @Mukamik @GoogleCloudPlatform/dee-platform-ops
+# See https://help.github.com/en/articles/about-code-owners
+# for more info about CODEOWNERS file.
+
+# These owners will be the default owners for everything in
+# the repo. Unless a later match takes precedence.
+*                   @GoogleCloudPlatform/anthos-dpe
