--- a/k8-manifests/common/springprofile-mysql.yaml
+++ b/k8-manifests/common/springprofile-mysql.yaml
@@ -23,5 +23,5 @@ kind: ConfigMap
 metadata:
   name: spring-profile
 data:
-  SPRING_PROFILES_ACTIVE: "DATABASE"
+  SPRING_PROFILES_ACTIVE: "database"
 # [END anthosbaremetal_common_springprofile_mysql_configmap_spring_profile]
