chore: fix spring profile

--- a/k8-manifests/common/service-configs.yaml
+++ b/k8-manifests/common/service-configs.yaml
@@ -20,6 +20,7 @@ metadata:
 data:
   INVENTORY_EP: "http://inventory-svc:8080"
   PAYMENTS_EP: "http://payments-svc:8080"
+  MYSQL_HOST: "mysql-db"
   ACTIVE_ITEM_TYPE: "burgers"
   ITEMS: |
     items:
