--- a/k8-manifests/release/payments.yaml
+++ b/k8-manifests/release/payments.yaml
@@ -49,6 +49,21 @@ spec:
             configMapKeyRef:
               name: spring-profile
               key: SPRING_PROFILES_ACTIVE
+        - name: PROJECT_ID
+          valueFrom:
+            configMapKeyRef:
+              name: service-configs
+              key: PROJECT_ID
+        - name: SPANNER_ID
+          valueFrom:
+            configMapKeyRef:
+              name: service-configs
+              key: SPANNER_ID
+        - name: SPANNER_DATABASE
+          valueFrom:
+            configMapKeyRef:
+              name: service-configs
+              key: SPANNER_DATABASE
         resources:
           requests:
             cpu: 100m
