--- a/src/inventory/src/main/resources/application-jss.properties
+++ b/src/inventory/src/main/resources/application-jss.properties
@@ -2,5 +2,5 @@ spring.cloud.gcp.logging.enabled=true
 spring.cloud.gcp.spanner.project-id=${PROJECT_ID}
 spring.cloud.gcp.spanner.instance-id=${SPANNER_ID}
 spring.cloud.gcp.spanner.database=${DATABASE}
-spring.cloud.gcp.spanner.emulator.enabled=${SPANNER_EMULATOR_ENABLED}
+spring.cloud.gcp.spanner.emulator.enabled=false
 spring.cloud.gcp.spanner.emulator-host=${SPANNER_EMULATOR_URL}
